--- a/views/inicio.jade
+++ b/views/inicio.jade
@@ -34,6 +34,7 @@ html(ng-app="jusypazNormalApp" manifest="/cache.manifest" type="text/cache-manif
 
       
 
-    div(ng-view)
+    div.page_wrapper
+        div(ng-view)
 
     
