--- a/views/partials/hv.jade
+++ b/views/partials/hv.jade
@@ -34,13 +34,13 @@ div.info
       tr
          td
             label.small_form Salud - EPS - SISBEN
-            div(input-inline-edit="root.hoja.salud" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="24")
+            div(input-inline-text="root.hoja.salud" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="24")
          td
             label.small_form Historia clínica
             div(input-inline-text="root.hoja.clinica" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="25")
          td
             label.small_form Otros nombres y apellidos adoptados
-            div(input-inline-edit="root.hoja.otros_nombres" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="26")
+            div(input-inline-text="root.hoja.otros_nombres" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="26")
       tr
          td
             label.small_form Estatura
@@ -97,44 +97,44 @@ div.info
       tr
          td
             label.small_form Cuentas de ahorro
-            div(input-inline-edit="root.hoja.cuentas_ahorro" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="61")
+            div(input-inline-text="root.hoja.cuentas_ahorro" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="61")
          td
             label.small_form Cuentas corrientes
-            div(input-inline-edit="root.hoja.cuentas_corriente" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="62")
+            div(input-inline-text="root.hoja.cuentas_corriente" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="62")
          td
             label.small_form Tarjetas de crédito
-            div(input-inline-edit="root.hoja.tarjetas_credito" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="63")
+            div(input-inline-text="root.hoja.tarjetas_credito" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="63")
       tr
          td
             label.small_form CDT
-            div(input-inline-edit="root.hoja.cdt" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="64")
+            div(input-inline-text="root.hoja.cdt" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="64")
          td
             label.small_form Obligaciones financieras con entidades financieras
-            div(input-inline-edit="root.hoja.obligaciones_entidades" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="65")
+            div(input-inline-text="root.hoja.obligaciones_entidades" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="65")
          td
             label.small_form Obligaciones financieras con particulares / otras entidades
-            div(input-inline-edit="root.hoja.obligaciones_familiares" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="66")
+            div(input-inline-text="root.hoja.obligaciones_familiares" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="66")
       tr
          td
             label.small_form Seguros de vida
-            div(input-inline-edit="root.hoja.seguros_vida" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="67")
+            div(input-inline-text="root.hoja.seguros_vida" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="67")
 
    h2.info_subtitle Bienes 
    table.tab_form_table
       tr
          td
             label.small_form Inmuebles
-            div(input-inline-edit="root.hoja.inmuebles" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="71")
+            div(input-inline-text="root.hoja.inmuebles" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="71")
          td
             label.small_form Muebles
-            div(input-inline-edit="root.hoja.muebles" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="72")
+            div(input-inline-text="root.hoja.muebles" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="72")
          td
             label.small_form Sociedades y otros 
-            div(input-inline-edit="root.hoja.sociedades" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="73")
+            div(input-inline-text="root.hoja.sociedades" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="73")
       tr
          td
             label.small_form Otros
-            div(input-inline-edit="root.hoja.otros" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="74")
+            div(input-inline-text="root.hoja.otros" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="74")
          td
             label.small_form Bienes que ofrece al fondo nacional de reparación
-            div(input-inline-edit="root.hoja.bienes_fondo" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="75")
+            div(input-inline-text="root.hoja.bienes_fondo" on-save="set_hv_dirty()" ng-focus="edit()" tabindex="75")
