--- a/views/partials/postulado.jade
+++ b/views/partials/postulado.jade
@@ -29,7 +29,7 @@ div(ng-controller="PostuladoCtrl")
     tabset.info_tabs
       tab.info_tab.active(heading="Hoja de Vida" select="hv()")
         div.tab_content(ng-include="'/partials/hv'")        
-      tab.info_tab(heading="Justicia y Paz" select="jyp()") 
+      tab.info_tab(heading="Transicional" select="jyp()") 
         div.tab_content(ng-include="'/partials/jyp'")
       tab.info_tab(heading="Procesos" select="proces()") 
         div.tab_content(ng-include="'/partials/proc'")
