--- a/views/partials/proc.jade
+++ b/views/partials/proc.jade
@@ -29,10 +29,10 @@ div.info
                   div(input-inline-select-pp="root.proc.tipo" on-save="set_proc_dirty()" opciones="root.tipos_proc" ng-focus="edit()" tabindex="15")
                td
                   label.small_form Imputaciones
-                  div(input-inline-edit="root.proc.imputaciones" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="21")
+                  div(input-inline-text="root.proc.imputaciones" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="21")
                td
                   label.small_form Condenas
-                  div(input-inline-edit="root.proc.condenas" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="22")            
+                  div(input-inline-text="root.proc.condenas" on-save="set_proc_dirty()" ng-focus="edit()" tabindex="22")            
             tr   
                td
                   label.small_form Absoluciones
