--- a/views/tablero.jade
+++ b/views/tablero.jade
@@ -17,6 +17,7 @@ html(ng-app="jusypazApp" manifest="/cache.manifest" type="text/cache-manifest")
     script(src='/js/postulado_ctrl.js')
     script(src='/js/inline.js')
     script(src='/js/file_upload.js')
+    script(src='/js/upload.js')
     script(src='/js/d3.v3.min.js')
 
     title jusypaz - Tablero de inicio
@@ -39,8 +40,15 @@ html(ng-app="jusypazApp" manifest="/cache.manifest" type="text/cache-manifest")
                   li.header_submenu_item(ng-click="config()") Configuraciones 
                   li.header_submenu_item(ng-click="logout()") Logout 
 
-      
+    
+    div.root(ng-controller="RootCtrl")
+      div.messages
+        div.notification(ng-show="root.notification" ng-animate="'animate'")
+          {{ root.notification }}
+        div.error_message(ng-show="root.error" ng-animate="'animate'")
+          {{ root.error }}
 
-    div(ng-view)
+      div.page_wrapper
+        div(ng-view)
 
     
