--- a/public/css/main.css
+++ b/public/css/main.css
@@ -146,6 +146,17 @@ input.dialog_input {
     box-shadow: 5px 5px 2px #010101;
 }
 
+.file_browser {
+    position: absolute;
+    top: 50px;
+    left: 10%;
+    margin: 0 auto;
+    width: 80%;
+    border-radius: 12px;
+    background-color: #5EBAD9;
+    box-shadow: 5px 5px 2px #010101;
+}
+
 .navigation_header {
   height: 44px;
   margin: 0 0 15px 0;
@@ -805,12 +816,15 @@ li.acciones_link {
   margin-right: 10px;
 }
 
+.action {
+  background: none;
+  border: none;
+}
+
 div.uploadContainer {
    position: relative;
-   width: 600px;
-   height: 100px;
 }
-/*
+
 div.uploadContainer input[type=file] {
    visibility: hidden;
    position: absolute;
@@ -819,4 +833,23 @@ div.uploadContainer input[type=file] {
    left: 0;
    right: 0;
 }
-*/
+
+.file {
+  width: 262px;
+  display: inline-block;
+}
+
+.close_button {
+  padding: 10px 10px 0 0;
+  cursor: pointer;
+}
+
+.doc_title {
+  font-size: 20px;
+  color: white;
+  text-align: center;
+}
+
+.file_browser_content {  
+    padding: 50px;
+}
