--- a/views/admin/partials/informes.jade
+++ b/views/admin/partials/informes.jade
@@ -32,4 +32,4 @@ div.informes_portal
               td 
                 div {{p.nombres}}
               td
-                button.action(ng-click="informe_postulado(p)") Generar
+                button.buttons(ng-click="informe_postulado(p)") Generar
