--- a/public/css/main.css
+++ b/public/css/main.css
@@ -579,6 +579,18 @@ td.actions {
   left: -50%;
 }
 
+.message_notification {
+  cursor: pointer;
+  background-color: #EDB44A;
+  color: #136134;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 10px;
+  width: 800px;
+  margin: 0 auto;  
+  position: relative;
+  left: -50%;
+}
 
 .header_submenu.ng-hide-add {
   -webkit-transition:0.2s linear all;
@@ -852,4 +864,13 @@ div.uploadContainer input[type=file] {
 
 .file_browser_content {  
     padding: 50px;
+}
+
+.message_text {
+  width: 100%;
+  height: 400px;
+}
+
+tr.unread {
+  font-weight: bold;
 }
