--- a/views/tablero.jade
+++ b/views/tablero.jade
@@ -37,6 +37,7 @@ html(ng-app="jusypazApp" manifest="/cache.manifest" type="text/cache-manifest")
                 ul.header_submenu(ng-show="show_submenu")
                   li.header_submenu_item(ng-click="admin_postulados()")  Administración Postulados
                   li.header_submenu_item(ng-click="admin_users()") Administración Usuarios 
+                  li.header_submenu_item(ng-click="informes()") Informes
                   li.header_submenu_item(ng-click="config()") Configuraciones 
                   li.header_submenu_item(ng-click="logout()") Logout 
 
