--- a/views/partials/jyp_fosas.jade
+++ b/views/partials/jyp_fosas.jade
@@ -36,7 +36,8 @@ div.info_wrapper
                div(input-inline-radio="root.fosa.enunciada" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="6")
             td
                label.small_form Hecho relacionado
-               div(input-inline-edit="root.fosa.delito" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="7")            
+               //-div(input-inline-edit="root.fosa.delito" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="7")            
+               div(input-inline-select="root.fosa.delito" opciones="root.delitos_postulado" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="7")
             td
                label.small_form Hora en mención
                div(input-inline-edit="root.fosa.hora_mencion" on-save="set_fosa_dirty()" ng-focus="edit()" tabindex="8")
